fix: preserve fish habitat order